--- a/UI/styles/main.css
+++ b/UI/styles/main.css
@@ -309,6 +309,193 @@ hr {
 	margin-bottom: 20px;
 }
 
+#add-articles-form {
+	box-sizing: border-box;
+	margin-top: 5%;
+}
+
+#add-articles-form h1 {
+	margin-bottom: 20px;
+	font-size: 4em;
+	color: #3C4858;
+}
+
+#add-articles-form input,
+#add-articles-form textarea,
+#add-articles-form select {
+	margin-bottom: 20px;
+}
+
+.txt-area {
+	height: 12em;
+    min-height: 8em;
+    max-height: 24em;
+}
+
+#add-articles-form select {
+	color: #666666; 
+}
+
+#add-comment-container {
+	box-sizing: border-box;
+	margin-top: 5%;
+}
+
+#add-comment-container h1 {
+	margin-bottom: 20px;
+	font-size: 4em;
+	color: #3C4858;
+}
+
+#add-comment-container input {
+	margin-bottom: 20px;
+}
+
+.dashboard-tab {
+	background-color: #fff;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	min-height: 10vh;
+	width: 100%;
+}
+
+.dashboard-tab2 {
+	background-color: #fff;
+	min-height: 10vh;
+	width: 100%;
+}
+
+.dashboard-tab h4 {
+	float: left;
+	color: #4F575E;
+	font-size: 2em;
+	margin-right: -23%;
+	margin-left: 3%;
+}
+
+.dashboard-tab a {
+	color: #fff;
+	text-decoration: none;
+	background-color: #56AD55;
+	border: 1px solid transparent;
+    border-radius: 2px; 
+}
+
+.own-title {
+	font-size: 40px;
+	color: #4F575E;
+	font-family: 'Dancing Script', cursive;
+}
+
+.dashboard-tab a:active,
+.dashboard-tab a:hover{
+	background-color: #468045;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 20px;
+  margin-top: 2%;
+  margin-left: 3%;
+  margin-right: 3%;
+  margin-bottom: 1%;
+}
+
+.grid-container2 {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-gap: 20px;
+  margin-top: 2%;
+  margin-left: 3%;
+  margin-right: 3%;
+  margin-bottom: 1%;
+}
+
+.story {
+  border: 1px solid #d3d3d3;
+  border-radius: .25rem;
+}
+
+.story:hover,
+.story:focus,
+.story:active {
+	box-shadow: 0 0 5px #256188;
+}
+
+.story-image {	
+  background-size: cover;
+  min-height: 180px;
+  max-height: 280px;
+  background-position: center;
+  background-color: #ccc;
+  height: 280px;
+}
+
+.story-image img {
+	height: 100%;
+	width: 100%;
+}
+
+.story-content {
+  padding: 15px;
+}
+
+.story-content h4 {
+	font-size: 2em;
+	color: #4F575E;
+}
+
+.story-content h3 {
+	color: #4F575E;
+	padding-top: 10px;
+}
+
+.story-content p {
+	font-size: 20px;
+}
+
+.story-button {
+  background-color: transparent;
+  border: 1px solid #2196F3;
+  padding: .5rem 1rem;
+  cursor: pointer;
+  border-radius: .25rem;
+  outline: none;
+  margin-top: 10px;
+  font-size: 20px;
+  font-family: "Times New Roman";
+  color: #4F575E;
+}
+
+.story-button-all {
+  background-color: transparent;
+  border: 1px solid #2196F3;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  padding-left: 5px;
+  padding-right: 5px;
+  margin-bottom: 8px;
+  margin-left: 5px;
+  cursor: pointer;
+  border-radius: .25rem;
+  outline: none;
+  font-size: 20px;
+  font-family: "Times New Roman";
+  color: #4F575E;
+}
+
+.story button:active,
+.story button:hover,
+.story a:hover {
+	background-color: #CCCCCC;
+}
+
+.story a {
+	text-decoration: none;
+}
+
 .on{
 	border-bottom: 4px solid #E2E2E2;
 }
