ft(ui): add delete article page [Finishes #168365490]

--- a/UI/views/deleteArticle.html
+++ b/UI/views/deleteArticle.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
         integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../styles/main.css">
-    <title>Edit an article</title>
+    <title>Delete an article</title>
 </head>
 
 <body>
@@ -33,7 +33,7 @@
     <div class="container">
         <div id="add-articles-form">
             <i class="fas fa-people-carry up-logo"></i>
-            <h1>Edit an article</h1>
+            <h1>Delete an article</h1>
             <form action="userDashboard.html" method="">
                 <input class="inputs-style" type="text" name="" value="Abdoul Nuru"><br>
                 <input class="inputs-style" type="text" name="" value="Life at Andela"><br>
@@ -49,7 +49,7 @@
                 </select><br>
                 <textarea
                     class="inputs-style txt-area">Some quick example text to build on the article card to see how the articles will look like.</textarea><br>
-                <button class="my-buttons-customized">Update</button>
+                <button class="my-buttons-customized">Delete</button>
             </form>
         </div>
     </div>
