--- a/UI/views/addArticle.html
+++ b/UI/views/addArticle.html
@@ -20,7 +20,7 @@
         </div>
         <ul class="links">
             <li><a class="selected" href="userDashboard.html">Home</a></li>
-            <li><a class="selected on" href="userDashboard.html">Workspace</a></li>
+            <li><a class="selected on" href="addArticle.html">Workspace</a></li>
             <li><a class="selected" href="login.html">Log out</a></li>
         </ul>
         <div class="burger">
