--- a/UI/styles/main.css
+++ b/UI/styles/main.css
@@ -496,6 +496,71 @@ hr {
 	text-decoration: none;
 }
 
+.view-more-grid {
+	display: grid;
+  	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  	margin-top: 3%;
+  	margin-left: 17%;
+  	margin-right: 17%;
+}
+
+.view-more {
+	border: 1px solid #d3d3d3;
+  	border-radius: .25rem;
+}
+
+.one-img {
+	background-size: cover;
+  	min-height: 180px;
+  	max-height: 280px;
+  	background-position: center;
+  	background-color: #ccc;
+  	height: 280px;
+}
+
+.one-img img{
+	width: 100%;
+	height: 100%;
+}
+
+.one-content {
+	padding: 15px;
+}
+
+.one-content h4 {
+	font-size: 2em;
+	color: #4F575E;
+}
+
+.one-content p {
+	font-size: 20px;
+	padding-bottom: 10px;
+}
+
+.view-more button:active,
+.view-more button:hover,
+.view-more a:hover {
+	background-color: #CCCCCC;
+}
+
+.view-more a {
+	text-decoration: none;
+}
+
+.view-more:hover {
+	box-shadow: 0 0 5px #256188;
+}
+
+.comments-grid {
+	display: grid;
+  	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  	margin-left: 17%;
+  	margin-right: 17%;
+  	background-color: #ccc;
+  	margin-top: 1%;
+  	margin-bottom: 2%;
+}
+
 .comments {
 	padding: 20px;	
 }
