--- a/UI/styles/main.css
+++ b/UI/styles/main.css
@@ -637,6 +637,62 @@ hr {
 	background-color: #CCCCCC;
 } 
 
+.table-content {
+	border-collapse: collapse;
+	margin: 25px 0;
+	font-size: 0.9em;
+	overflow: hidden;
+	border-radius: 5px 5px 0 0;
+	box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+	min-width: 900px;
+}
+
+.table-content thead tr {
+	background-color: #256188;
+	color: #E2E2E2;
+	text-align: left;
+	font-weight: bold;
+	font-size: 18px;
+}
+
+.table-content th,
+.table-content td {
+	padding: 12px 15px;
+}
+
+.table-content tbody tr {
+	border-bottom: 1px solid #dddddd;
+}
+
+.table-content tbody tr:nth-of-type(even) {
+	background-color: #f3f3f3;
+}
+
+.table-content tbody tr:last-of-type {
+	border-bottom: 2px solid #256188;
+}
+
+.table-content tbody tr.active-row {
+	font-weight: bold;
+	color: #009879;
+}
+
+#flagged-comments {
+	margin-top: 2%;
+	margin-right: 18%;
+	margin-left: 23%;
+	padding-bottom: 5px;
+	overflow-x: auto;
+}
+
+.admn-title {
+	margin-top: 2%;
+}
+
+table button:hover {
+	background-color: #CCCCCC;
+}
+
 .on{
 	border-bottom: 4px solid #E2E2E2;
 }
