bg(UI): Made improvements on the UI [Finishes #168860620]

--- a/UI/views/viewAll.html
+++ b/UI/views/viewAll.html
@@ -55,9 +55,9 @@
             <div class="story-content">
                 <h4>Working in a team</h4>
                 <p>Some quick example text to build on the article card to see how...</p>
-                <a class="story-button" href="viewOne.html">Read more</a>
-                <a class="story-button" href="addComment.html">Add comment</a>
-                <button class="story-button">Flag</button>
+                <a class="story-button-edit" href="viewOne.html">Read more</a>
+                <a class="story-button-share" href="addComment.html">Add comment</a>
+                <button class="story-button-delete">Flag</button>
                 <h3>Posted by Nuru on 13/09/2019</h3>
             </div>
 
@@ -65,12 +65,12 @@
                 <div class="comments-div">
                     <h3>Guevara</h3>
                     <p>i this article was inapropriate.</p>
-                    <button class="story-button-all btn-flag">Flag</button>
+                    <button class="story-button-delete2"><i class="far fa-flag"></i></button>
                 </div>
                 <div class="comments-div">
                     <h3>Bella</h3>
                     <p>Woow i really enjoyed this article</p>
-                    <button class="story-button-all btn-flag">Flag</button>
+                    <button class="story-button-delete2"><i class="far fa-flag"></i></button>
                 </div>
             </div>
         </div>
@@ -82,9 +82,9 @@
             <div class="story-content">
                 <h4>Web development</h4>
                 <p>Some quick example text to build on the article card to see how...</p>
-                <a class="story-button" href="viewOne.html">Read more</a>
-                <a class="story-button" href="addComment.html">Add comment</a>
-                <button class="story-button">Flag</button>
+                <a class="story-button-edit" href="viewOne.html">Read more</a>
+                <a class="story-button-share" href="addComment.html">Add comment</a>
+                <button class="story-button-delete">Flag</button>
                 <h3>Posted by Ezekiel on 07/09/2019</h3>
             </div>
 
@@ -92,7 +92,7 @@
                 <div class="comments-div">
                     <h3>Nuru</h3>
                     <p>Thank you for this good article</p>
-                    <button class="story-button-all btn-flag">Flag</button>
+                    <button class="story-button-delete2"><i class="far fa-flag"></i></button>
                 </div>
             </div>
         </div>
@@ -103,9 +103,9 @@
             <div class="story-content">
                 <h4>Faith in God</h4>
                 <p>Some quick example text to build on the article card to see how...</p>
-                <a class="story-button" href="viewOne.html">Read more</a>
-                <a class="story-button" href="addComment.html">Add comment</a>
-                <button class="story-button">Flag</button>
+                <a class="story-button-edit" href="viewOne.html">Read more</a>
+                <a class="story-button-share" href="addComment.html">Add comment</a>
+                <button class="story-button-delete">Flag</button>
                 <h3>Posted by Festus on 07/09/2019</h3>
             </div>
 
@@ -113,12 +113,12 @@
                 <div class="comments-div">
                     <h3>Emmanuel</h3>
                     <p>Ameen!!!</p>
-                    <button class="story-button-all btn-flag">Flag</button>
+                    <button class="story-button-delete2"><i class="far fa-flag"></i></button>
                 </div>
                 <div class="comments-div">
                     <h3>Festus</h3>
                     <p>Faith can move mountains.</p>
-                    <button class="story-button-all btn-flag">Flag</button>
+                    <button class="story-button-delete2"><i class="far fa-flag"></i></button>
                 </div>
             </div>
         </div>
@@ -130,9 +130,9 @@
             <div class="story-content">
                 <h4>Classic cars</h4>
                 <p>Some quick example text to build on the article card to see how...</p>
-                <a class="story-button" href="viewOne.html">Read more</a>
-                <a class="story-button" href="addComment.html">Add comment</a>
-                <button class="story-button">Flag</button>
+                <a class="story-button-edit" href="viewOne.html">Read more</a>
+                <a class="story-button-share" href="addComment.html">Add comment</a>
+                <button class="story-button-delete">Flag</button>
                 <h3>Posted by Doddy on 28/08/2019</h3>
             </div>
 
@@ -140,7 +140,7 @@
                 <div class="comments-div">
                     <h3>Sam</h3>
                     <p>i loved the beetle.</p>
-                    <button class="story-button-all btn-flag">Flag</button>
+                    <button class="story-button-delete2"><i class="far fa-flag"></i></button>
                 </div>
 
             </div>
@@ -153,9 +153,9 @@
             <div class="story-content">
                 <h4>Healthy diet</h4>
                 <p>Some quick example text to build on the article card to see how...</p>
-                <a class="story-button" href="viewOne.html">Read more</a>
-                <a class="story-button" href="addComment.html">Add comment</a>
-                <button class="story-button">Flag</button>
+                <a class="story-button-edit" href="viewOne.html">Read more</a>
+                <a class="story-button-share" href="addComment.html">Add comment</a>
+                <button class="story-button-delete">Flag</button>
                 <h3>Posted by Karen on 14/08/2019</h3>
             </div>
 
@@ -170,9 +170,9 @@
             <div class="story-content">
                 <h4>Most popular sports in the world</h4>
                 <p>Some quick example text to build on the article card to see how...</p>
-                <a class="story-button" href="viewOne.html">Read more</a>
-                <a class="story-button" href="addComment.html">Add comment</a>
-                <button class="story-button">Flag</button>
+                <a class="story-button-edit" href="viewOne.html">Read more</a>
+                <a class="story-button-share" href="addComment.html">Add comment</a>
+                <button class="story-button-delete">Flag</button>
                 <h3>Posted by Nuru on 17/07/2019</h3>
             </div>
 
@@ -180,7 +180,7 @@
                 <div class="comments-div">
                     <h3>Guevara</h3>
                     <p>Yeaaah, football is the best.</p>
-                    <button class="story-button-all btn-flag">Flag</button>
+                    <button class="story-button-delete2"><i class="far fa-flag"></i></button>
                 </div>
             </div>
         </div>
