--- a/UI/views/addComment.html
+++ b/UI/views/addComment.html
@@ -36,8 +36,8 @@
             <h1>Add a comment</h1>
             <form action="viewAll.html" method="">
                 <input class="inputs-style" type="text" name="" placeholder="Username"><br>
-                <textarea class="inputs-style txt-area2" placeholder="Comment"></textarea><br>
-                <button class="my-buttons-customized1" id="adc-small">Add</button>
+                <textarea class="inputs-style txt-area" placeholder="Comment"></textarea><br>
+                <button class="my-buttons-customized">Add</button>
             </form>
         </div>
     </div>
