--- a/UI/views/deleteArticle.html
+++ b/UI/views/deleteArticle.html
@@ -35,11 +35,11 @@
             <i class="fas fa-people-carry up-logo"></i>
             <h1>Delete an article</h1>
             <form action="userDashboard.html" method="">
-                <input class="inputs-style-ex" type="text" name="" value="Abdoul Nuru"><br>
-                <input class="inputs-style-ex" type="text" name="" value="Life at Andela"><br>
-                <input class="inputs-style-ex" type="text" name=""
+                <input class="inputs-style" type="text" name="" value="Abdoul Nuru"><br>
+                <input class="inputs-style" type="text" name="" value="Life at Andela"><br>
+                <input class="inputs-style" type="text" name=""
                     value="https://images.unsplash.com/photo-1561993090-b7c00b87852a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"><br>
-                <select class="inputs-style-ex">
+                <select class="inputs-style">
                     <option>Category</option>
                     <option value="inspirational" selected>Inspirational</option>
                     <option value="sport">Sports</option>
@@ -48,8 +48,8 @@
                     <option value="politics">Politics</option>
                 </select><br>
                 <textarea
-                    class="inputs-style-ex txt-area">Some quick example text to build on the article card to see how the articles will look like.</textarea><br>
-                <button class="my-buttons-customized2" id="adc-small">Delete</button>
+                    class="inputs-style txt-area">Some quick example text to build on the article card to see how the articles will look like.</textarea><br>
+                <button class="my-buttons-customized">Delete</button>
             </form>
         </div>
     </div>
