--- a/UI/views/login.html
+++ b/UI/views/login.html
@@ -31,16 +31,14 @@
     </nav>
 
     <div class="container">
-        <div id="lgn-frm-small">
-            <div id="login-form-container">
-                <i class="fas fa-people-carry up-logo"></i>
-                <h1>Login</h1>
-                <form action="userDashboard.html" method="" class="pure-form">
-                    <input class="inputs-style" type="text" name="" placeholder="Username or Email"><br>
-                    <input class="inputs-style" type="password" name="" placeholder="Password"><br>
-                    <button class="my-buttons-customized1" id="sgi-small">Login</button>
-                </form>
-            </div>
+        <div id="login-form-container">
+            <i class="fas fa-people-carry up-logo"></i>
+            <h1>Login</h1>
+            <form action="userDashboard.html" method="" class="pure-form">
+                <input class="inputs-style" type="text" name="" placeholder="Username or Email"><br>
+                <input class="inputs-style" type="password" name="" placeholder="Password"><br>
+                <button class="my-buttons-customized">Login</button>
+            </form>
         </div>
     </div>
 
