--- a/UI/views/signup.html
+++ b/UI/views/signup.html
@@ -44,9 +44,13 @@
                 <input class="inputs-style" type="text" name="" placeholder="JobRole"><br>
                 <input class="inputs-style" type="text" name="" placeholder="Department"><br>
                 <input class="inputs-style" type="text" name="" placeholder="Address"><br>
-                <button class="my-buttons-customized">Sign up</button>
+                <button class="my-buttons-customized2" id="btn2-small">Sign up</button>
             </form>
         </div>
+    </div>
+
+    <div class="footer">
+        <p>Teamwork &copy; 2019</p>
     </div>
 
     <script src="../js/main.js"></script>
