--- a/UI/views/userDashboard.html
+++ b/UI/views/userDashboard.html
@@ -32,11 +32,11 @@
     </nav>
 
     <div class="dashboard-tab">
-        <h4 class="the-user">Welcome Abdoul Nuru</h4>
-        <div class="container">
+        <!--<h4 class="the-user">Welcome Abdoul Nuru</h4>
+        <div class="container">-->
             <a class="my-buttons-customized" href="addArticle.html">Add an article</a>
             <a class="my-buttons-customized" href="viewAll.html">View all articles</a>
-        </div>
+        <!--</div>-->
     </div>
     <div class="container">
         <p class="own-title">your articles</p>
@@ -51,9 +51,9 @@
             <div class="story-content">
                 <h4>Working Out</h4>
                 <p>Some quick example text to build on the article card to see how the articles will look like.</p>
-                <button class="story-button">Share</button>
-                <a class="story-button" href="editArticle.html">Edit</a>
-                <a class="story-button" href="deleteArticle.html">Delete</a>
+                <button class="story-button-share">Share</button>
+                <a class="story-button-edit" href="editArticle.html">Edit</a>
+                <a class="story-button-delete" href="deleteArticle.html">Delete</a>
             </div>
         </div>
         <div class="story">
@@ -64,9 +64,9 @@
             <div class="story-content">
                 <h4>Basketball</h4>
                 <p>Some quick example text to build on the article card to see how the articles will look like.</p>
-                <button class="story-button">Share</button>
-                <a class="story-button" href="editArticle.html">Edit</a>
-                <a class="story-button" href="deleteArticle.html">Delete</a>
+                <button class="story-button-share">Share</button>
+                <a class="story-button-edit" href="editArticle.html">Edit</a>
+                <a class="story-button-delete" href="deleteArticle.html">Delete</a>
             </div>
         </div>
         <div class="story">
@@ -77,9 +77,9 @@
             <div class="story-content">
                 <h4>Web Dev</h4>
                 <p>Some quick example text to build on the article card to see how the articles will look like.</p>
-                <button class="story-button">Share</button>
-                <a class="story-button" href="editArticle.html">Edit</a>
-                <a class="story-button" href="deleteArticle.html">Delete</a>
+                <button class="story-button-share">Share</button>
+                <a class="story-button-edit" href="editArticle.html">Edit</a>
+                <a class="story-button-delete" href="deleteArticle.html">Delete</a>
             </div>
         </div>
         <div class="story">
@@ -90,9 +90,9 @@
             <div class="story-content">
                 <h4>African Cuisine</h4>
                 <p>Some quick example text to build on the article card to see how the articles will look like.</p>
-                <button class="story-button">Share</button>
-                <a class="story-button" href="editArticle.html">Edit</a>
-                <a class="story-button" href="deleteArticle.html">Delete</a>
+                <button class="story-button-share">Share</button>
+                <a class="story-button-edit" href="editArticle.html">Edit</a>
+                <a class="story-button-delete" href="deleteArticle.html">Delete</a>
             </div>
         </div>
         <div class="story">
@@ -103,9 +103,9 @@
             <div class="story-content">
                 <h4>Life at Andela</h4>
                 <p>Some quick example text to build on the article card to see how the articles will look like.</p>
-                <button class="story-button">Share</button>
-                <a class="story-button" href="editArticle.html">Edit</a>
-                <a class="story-button" href="deleteArticle.html">Delete</a>
+                <button class="story-button-share">Share</button>
+                <a class="story-button-edit" href="editArticle.html">Edit</a>
+                <a class="story-button-delete" href="deleteArticle.html">Delete</a>
             </div>
         </div>
     </div>
