--- a/UI/views/viewOne.html
+++ b/UI/views/viewOne.html
@@ -37,9 +37,25 @@
             </div>
             <div class="one-content">
                 <h4>Working in a team</h4>
-                <p>Some quick example text to build on the article card to see how the articles will look like.</p>
-                <a class="story-button" href="addComment.html">Add comment</a>
-                <button class="story-button">Flag as inappropriate</button>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                aliqua. Bibendum est ultricies integer quis auctor elit. Egestas sed tempus urna et. Fermentum odio eu feugiat pretium
+                nibh ipsum consequat. Sed cras ornare arcu dui. Mi proin sed libero enim. Sed egestas egestas fringilla phasellus
+                faucibus scelerisque. In iaculis nunc sed augue. Rhoncus mattis rhoncus urna neque viverra justo nec ultrices dui. Hac
+                habitasse platea dictumst quisque sagittis purus sit amet volutpat. Tortor vitae purus faucibus ornare suspendisse sed
+                nisi lacus. Bibendum est ultricies integer quis auctor elit sed vulputate. Gravida rutrum quisque non tellus orci. Nibh
+                tellus molestie nunc non blandit massa enim. Dignissim enim sit amet venenatis urna cursus eget. Tristique et egestas
+                quis ipsum suspendisse ultrices gravida dictum. Elit scelerisque mauris pellentesque pulvinar pellentesque habitant.
+                Molestie ac feugiat sed lectus vestibulum mattis ullamcorper velit sed.
+                    
+                Pellentesque habitant morbi tristique senectus et netus. Cursus risus at ultrices mi tempus imperdiet nulla malesuada.
+                Euismod quis viverra nibh cras pulvinar mattis. Eu tincidunt tortor aliquam nulla facilisi cras fermentum. Sollicitudin
+                tempor id eu nisl nunc mi ipsum. Nibh tellus molestie nunc non blandit massa. Rutrum quisque non tellus orci ac auctor
+                augue mauris. Enim nunc faucibus a pellentesque sit amet porttitor eget dolor. Ullamcorper a lacus vestibulum sed arcu.
+                Magna etiam tempor orci eu lobortis elementum nibh tellus. Scelerisque mauris pellentesque pulvinar pellentesque
+                habitant. Diam vulputate ut pharetra sit amet aliquam.
+            </p>
+                <a class="story-button-edit" href="addComment.html">Add comment</a>
+                <button class="story-button-delete"><i class="far fa-flag"></i></button>
             </div>
         </div>
     </div>
@@ -49,28 +65,28 @@
             <div>
                 <h3>Sam</h3>
                 <p>This article was so good!!!</p>
-                <button class="story-button btn-flag">Flag as inappropriate</button>
+                <button class="story-button-delete3"><i class="far fa-flag"></i></button>
             </div>
         </div>
         <div class="comments">
             <div>
                 <h3>Doddy</h3>
                 <p>bwaaaaaaah!!!</p>
-                <button class="story-button btn-flag">Flag as inappropriate</button>
+                <button class="story-button-delete3"><i class="far fa-flag"></i></button>
             </div>
         </div>
         <div class="comments">
             <div>
                 <h3>Guevara</h3>
                 <p>i think this article was inapropriate.</p>
-                <button class="story-button btn-flag">Flag as inappropriate</button>
+                <button class="story-button-delete3"><i class="far fa-flag"></i></button>
             </div>
         </div>
         <div class="comments">
             <div>
                 <h3>Dusabe</h3>
                 <p>feeling inspired</p>
-                <button class="story-button btn-flag">Flag as inappropriate</button>
+                <button class="story-button-delete3"><i class="far fa-flag"></i></button>
             </div>
         </div>
     </div>
