--- a/UI/views/addArticle.html
+++ b/UI/views/addArticle.html
@@ -35,10 +35,10 @@
             <i class="fas fa-people-carry up-logo"></i>
             <h1>Add an article</h1>
             <form action="userDashboard.html" method="">
-                <input class="inputs-style" type="text" name="" placeholder="Author"><br>
-                <input class="inputs-style" type="text" name="" placeholder="Title"><br>
-                <input class="inputs-style" type="text" name="" placeholder="Image url"><br>
-                <select class="inputs-style">
+                <input class="inputs-style2" type="text" name="" placeholder="Author"><br>
+                <input class="inputs-style2" type="text" name="" placeholder="Title"><br>
+                <input class="inputs-style2" type="text" name="" placeholder="Image url"><br>
+                <select class="inputs-style2">
                     <option>Category</option>
                     <option value="inspirational">Inspirational</option>
                     <option value="sport">Sports</option>
@@ -46,8 +46,8 @@
                     <option value="religion">Religion</option>
                     <option value="politics">Politics</option>
                 </select><br>
-                <textarea class="inputs-style txt-area" placeholder="Content"></textarea><br>
-                <button class="my-buttons-customized">Add</button>
+                <textarea class="inputs-style2 txt-area2" placeholder="Content"></textarea><br>
+                <button class="my-buttons-customized3" id="btn2-small">Add article</button>
             </form>
         </div>
     </div>
