--- a/UI/views/addComment.html
+++ b/UI/views/addComment.html
@@ -37,7 +37,7 @@
             <form action="viewAll.html" method="">
                 <input class="inputs-style" type="text" name="" placeholder="Username"><br>
                 <textarea class="inputs-style txt-area" placeholder="Comment"></textarea><br>
-                <button class="my-buttons-customized">Add</button>
+                <button class="my-buttons-customized2" id="btn2-small">Add</button>
             </form>
         </div>
     </div>
